added a bibtex reference, comments for section 3

--- a/mics2015.bib
+++ b/mics2015.bib
@@ -7,6 +7,24 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{Felleisen:2004,
+ author = {Felleisen, Matthias and Findler, Robert Bruce and Flatt, Matthew and Krishnamurthi, Shriram},
+ title = {The Structure and Interpretation of the Computer Science Curriculum},
+ journal = {J. Funct. Program.},
+ issue_date = {July 2004},
+ volume = {14},
+ number = {4},
+ month = jul,
+ year = {2004},
+ issn = {0956-7968},
+ pages = {365--378},
+ numpages = {14},
+ url = {http://dx.doi.org/10.1017/S0956796804005076},
+ doi = {10.1017/S0956796804005076},
+ acmid = {997813},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
 
 
 @online{basic-clojure-info,
