--- a/mics2015.tex
+++ b/mics2015.tex
@@ -365,6 +365,8 @@ Most of higher-order functions that produce collections are lazy. However, funct
 
 \subsection{Overview of ClojurEd project}\label{sec:project}
 
+
+
 \section{Error Messages}\label{sec:errors}
 
 \subsection{Current error messages in Clojure}\label{sec:currentem}
@@ -533,7 +535,7 @@ how they will be helpful
 hopefully linking to Clojure documentation
 
 \section{Technical Setup}\label{sec:technical}
-In approaching error handling, there are many technical issues. First we need to figure out how to catch and process the errors. Then, we need to figure out how to integrate that system with the tools for managing Clojure projects. Throughout this process it is important to keep in mind the usability for introductory students. Therefore, we would like to abstract over as much as we can, while still providing a robust system for students to develop their Clojure projects. 
+In error handling, there are many technical issues. First we need to figure out how to catch and process the errors. Then, we need to figure out how to integrate that system with the tools for managing Clojure projects. Throughout this process it is important to be mindful of usability for introductory students. Therefore we would like to synthesize the error handling system and the tools used by the student in a way that is both usable and robust.
 
 \subsection{On the Nature of Errors in Clojure}
 
@@ -552,7 +554,7 @@ Choosing the right IDE is important, especially for an introductory class, becau
 
 Both IDEs have a lot of functionality that we are looking for, but they do have some notable differences. LightTable still requires a separate installation of Leiningen in order to run projects. This would add another layer of difficulty for the student since installing Leiningen can be non-trivial. Nightcode comes packaged with its own distribution of Leiningen. This makes Nightcode easier to install and use. The REPL in each IDE is slightly different. In LightTable, the user opens up REPL using a context menu, and the REPL constantly evaluates each line of code in it. This ultimately provides more information, but it may be a little confusing for introductory students. In Nightcode, the REPL is always up in a separate frame, and each line is only evaluated when the user hits enter. LightTable uses hot keys and a context menu to do a lot of the tasks in LightTable such as running the project or starting a REPL. This is less familiar to introductory students, and it may be a little daunting at first. LightTable does provide a nice easy reference for searching for the appropriate hot keys to lessen the learning curve. Alternatively, Nightcode uses a lot of clearly labeled buttons and tabs that are intuitive for the user to perform tasks. \mmcomment{Do we have a preference for either or which one will likely be used in the introductory course?} 
 
-\subsection{Other Approaches we tried}
+\subsection{Approaches}
 Our first approach was to develop a IDE-specific plugin to intercept the error messages going to the console of the IDE. We found that the IDE was not handling the errors, and it was just printing out what was coming from Leiningen.
 
 Our next approach was to use a Leiningen plugin to try and intercept error messages. We searched through the Leiningen source code, and attempted various methods of interacting with Leiningen. None of these approaches allowed us to intercept the error messages that were being printed to the console. We now think that Leiningen uses nREPL, which is an evaluation tool, to handle compilation and error messages.
