--- a/mics2015.bib
+++ b/mics2015.bib
@@ -48,6 +48,15 @@
 	Url = {http://radar.oreilly.com/2012/05/clojure-repl.html},
 	Year = {2012}}
 
+@online{wikipedia-lazy,
+	Author = {Wikipedia},
+	Date-Added = {2015-03-21 18:49:31 +0000},
+	Date-Modified = {2015-03-21 18:49:35 +0000},
+	Lastchecked = {9/19/14},
+	Title = {Lazy Loading},
+	Url = {http://en.wikipedia.org/wiki/Lazy_loading},
+	Year = {2014}}
+
 @online{wikipedia-persistent,
 	Author = {Wikipedia},
 	Date-Added = {2015-03-11 20:15:41 +0000},
